src/cypd.css
/* ... */
.column.left.visible {
    width: var(--default-leftsider-width);
    flex-shrink: 0;
    transition-delay: calc(var(--default-transition-duration) / 2);
}

.column.right.visible {
    width: var(--default-rightsider-width);
    margin-left: var(--default-right-collapser-width);
}

.column.visible .cypd-layout-column-wrapper {
    transform: none;
    transition-delay: 0ms;
}

.column.middle {
    flex-grow: 5;
    overflow: hidden;
    padding: 10px 10px 10px 10px;
}

.column.middle.collapsed {
    transition-delay: calc(var(--default-transition-duration) / 2);
}

.cypd-layout-footer {
    /* position: fixed;
    bottom: 0px; */
    background-color: var(--default-cyp-blue-active);
    text-align: center;
    width: 100%;
    height: var(--default-footer-height);
}

@media (max-width: 800px) {
    .column.left {
        position: absolute;
        z-index: 21;
        height: 100%;
    }
    .column .collapser {
        top: calc(100% - var(--default-header-height) - var(--default-nav-height) - 90px);
    }
}


/* cypd table */

.cypd-table-container {
    margin: 10px;
    width: 100%;
    display: table;
}

.cypd-table-container .table-wrapper {
    border-radius: 5px;
    border: 1px solid var(--default-cyp-blue-active);
    /* cursor: pointer; */
    background: white;
    transition: box-shadow 100ms ease-in-out;
}

.cypd-table-container .table-wrapper.show-empty {
    min-height: 150px;
    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100px' height='100px' overflow='visible'><ellipse cx='50' cy='70' rx='30' ry='5' stroke='%none' fill='rgba(170,170,170,0.125)' /><path d='M25 55 35 40 65 40 75 55' stroke='rgba(170,170,170,0.5)' fill='none' stroke-linejoin='round' /><path d='M75 55 60 55 58 60 42 60 40 55 25 55 25 70 75 70 Z' stroke='rgba(170,170,170,0.5)' fill='rgb(238,238,238)' stroke-linejoin='round' /><text x='50' y='95' fill='rgba(170,170,170,0.5)' text-anchor='middle'>No Data</text></svg>");
    background-repeat: no-repeat;
    background-position: center center;
}

.cypd-table-container .cypd-table {
    display: table;
    border-collapse: collapse;
    width: 100%;
}


/* .cypd-table-container .table-wrapper:hover {
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.212), 0px 0px 4px rgba(0, 0, 0, 0.486);
} */

.cypd-table-container .cypd-table .row {
    height: 30px;
    line-height: 1.5;
    display: table-row;
    transition: background-color 100ms ease-in-out;
}

.cypd-table-container .cypd-table .row.header {
    color: white;
    font-size: 20px;
    font-weight: bolder;
    background-color: var(--default-cyp-blue-active);
}


/* .cypd-table-container .cypd-table .row.header:hover {
    background-color: var(--default-cyp-blue-opa-medium);
} */

.cypd-table-container .cypd-table .row.normal {
    border-bottom: 1px solid var(--default-cyp-blue-opa-light);
    color: rgb(109, 108, 108);
}

.cypd-table-container .cypd-table.nextpage .row.normal {
    animation: NextPage 300ms cubic-bezier(1, 0, 0, 1);
}

.cypd-table-container .cypd-table.prevpage .row.normal {
    animation: PrevPage 300ms cubic-bezier(1, 0, 0, 1);
}


/* .cypd-table-container .cypd-table .row.normal:hover {
    background-color: var(--default-cyp-blue-opa-light);
} */

.cypd-table-container .cypd-table .cell {
    position: relative;
    padding: 5px 10px 5px 10px;
    display: table-cell;
    vertical-align: middle;
    line-height: 100%;
    text-align: center;
    transition: transform 100ms ease-in-out;
}

.cypd-table-container .footer {
    box-sizing: border-box;
    position: relative;
    display: flex;
    justify-content: flex-start;
    flex-direction: row-reverse;
    align-items: center;
    padding: 10px 20px 10px 20px;
    height: 60px;
    line-height: 60px;
    width: 100%;
}

.cypd-table-container .footer .cypd-span,
.cypd-table-container .footer .cypd-input,
.cypd-table-container .footer .cypd-button {
    float: right;
}


/* .cypd-table-container .cypd-table .cell .cypd-icon-wrapper {
    position: relative;
    display: inline-block;
    transform: translateY(3px);
} */

.cypd-table-container .cypd-icon:not([class*='fc-']) * {
    stroke: rgb(109, 108, 108);
}

.cypd-table-container .cypd-tooltip-wrapper {
    display: inline-flex;
}

@keyframes NextPage {
    0% {
        opacity: 0;
        transform: translate(20px);
    }
    20% {
        opacity: 0;
    }
    100% {
        opacity: 1;
        transform: translate(0);
    }
}

@keyframes PrevPage {
    0% {
        opacity: 0;
        transform: translate(-20px);
    }
    20% {
        opacity: 0;
    }
    100% {
        opacity: 1;
        transform: translate(0);
    }
}


/* cypd cypd-modal */

.cypd-modal-container {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    user-select: text;
    z-index: 11;
}

.cypd-modal-container.active {
    opacity: 1;
    visibility: visible;
    transition: opacity var(--default-transition-duration) ease-in, visibility var(--default-transition-duration);
}

.cypd-modal-container.hide {
    opacity: 0;
    visibility: hidden;
    transition: opacity var(--default-transition-duration) ease-in, visibility 0ms ease-in var(--default-transition-duration);
}

.cypd-modal-container .cypd-modal-background {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    text-align: center;
    vertical-align: middle;
}

.cypd-modal-container .cypd-modal-background .cypd-modal {
    position: relative;
    background: white;
    display: inline-block;
    border-radius: 3px;
    min-width: 400px;
    padding: 10px;
    text-align: left;
}

.cypd-confirm-dialog-container {
    position: relative;
    z-index: 31;
}


/* 
.cypd-modal-container.active .cypd-modal-background .cypd-modal {
    animation: popIn 300ms;
}

.cypd-modal-container.hide .cypd-modal-background .cypd-modal {
    animation: popOut 300ms;
} */
/* ... */

